--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,10 @@
   }
 }
 
+html {
+  margin: 0rem 5rem;
+  box-sizing: border-box;
+}
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+ background: white;
 }
